switch to openfin 11 beta

--- a/public/app.json
+++ b/public/app.json
@@ -9,7 +9,7 @@
   },
   "runtime": {
     "arguments": "",
-    "version": "stable-v9"
+    "version": "11.69.42.26"
   },
   "shortcut": {
     "company": "OpenFin",
